--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,14 @@
 html,body{
     margin:0;
     padding:0;
+
     border: none;
+
     overflow-x:none;
+
     font-size:clamp(3vw,2vh,6vh);
+
     overflow-y: scroll;
-}
+
+    background-color: var(--arc-background-gradient-color0);  
+} 
